--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/vendor/chota@0.7.1.min.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <title>Document</title>
 </head>
 <body>
+
+  <div id="app"></div>
+  <script type="module" src="js/index.js"></script>
 
 </body>
 </html>
