--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/vendor/chota@0.7.1.min.css">
   <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <title>Reddit Pictures Organiser</title>
 </head>
 <body>
 
