--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="./css/vendor/chota@0.7.1.min.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <title>Reddit Pictures Organiser</title>
 </head>
 <body>
