Working on sub page

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-  <title>Reddit Pictures Organiser</title>
+  <title>RPO</title>
 </head>
 <body>
 
-  <div id="app"></div>
+  <main id="app"></main>
   <script type="module" src="js/index.js"></script>
 
 </body>
