--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <body>
 
   <main id="app"></main>
+
+  <script type="text/javascript" src="https://unpkg.com/reefjs@4.1.12/dist/reef.min.js"></script>
   <script type="module" src="js/index.js"></script>
 
 </body>
