Added re preconnect for image domains to html head. Added time filters for subreddit page

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,17 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <link rel="preconnect" href="https://i.redd.it/">
+  <link rel="preconnect" href="https://b.thumbs.redditmedia.com/">
+  <link rel="preconnect" href="https://i.imgur.com/">
+  <!-- need crossorigin: https://www.igvita.com/2015/08/17/eliminating-roundtrips-with-preconnect/  -->
+  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin> 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
   <title>RPO</title>
 </head>
 <body>
-
   <main id="app"></main>
   <script type="module" src="js/index.js"></script>
-
 </body>
 </html>
