Added swipe event handling for image viewer. Moved some functions into components for subredditPage and imageViewer as they were getting to long.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
   <main id="app"></main>
+  <script src="js/web_modules/tocca.js" async></script>
   <script type="module" src="js/index.js"></script>
 </body>
 </html>
