Added image swiper.

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,12 @@
   <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin> 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <!-- https://www.filamentgroup.com/lab/load-css-simpler/ -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" media="print" onload="this.media='all'">
   <title>RPO</title>
 </head>
 <body>
   <main id="app"></main>
-  <script src="js/web_modules/tocca.js" async></script>
   <script type="module" src="js/index.js"></script>
 </body>
 </html>
