--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
   <!-- https://www.filamentgroup.com/lab/load-css-simpler/ -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="css/vendor/swiper.min.css" media="print" onload="this.media='all'">
   <title>RPO</title>
 </head>
 <body>
